After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774833 - invalid (NULL) pointer instance warning on exit
invalid (NULL) pointer instance warning on exit
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
: 769130 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-11-22 10:16 UTC by Caolan McNamara
Modified: 2017-09-27 12:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix for warning on exit (1.09 KB, patch)
2016-11-22 10:16 UTC, Caolan McNamara
committed Details | Review

Description Caolan McNamara 2016-11-22 10:16:17 UTC
Created attachment 340503 [details] [review]
fix for warning on exit

There's a warning on exit of evince sometimes, doc_model has been zeroed by ev_view_accessible_finalize g_object_unref(priv_model) already before this is called during teardown
Comment 1 Bastien Nocera 2017-07-07 13:24:44 UTC
Review of attachment 340503 [details] [review]:

> Resolves: rhbz#1384203 warnings on exit

The commit message needs work. Should be something like:
page-action: Fix warnings on exit

<include actual warning message>

See https://bugzilla.redhat...

<URL to this bug>
Comment 2 Carlos Garcia Campos 2017-08-05 07:00:59 UTC
Comment on attachment 340503 [details] [review]
fix for warning on exit

Improved commit message and pushed.
Comment 3 Germán Poo-Caamaño 2017-09-27 12:44:19 UTC
*** Bug 769130 has been marked as a duplicate of this bug. ***