page-action-widget: Fix runtime warnings on exit

There's a warning on exit of evince sometimes, doc_model has been zeroed
by ev_view_accessible_finalize() already before this is called during teardown.

https://bugzilla.gnome.org/show_bug.cgi?id=774833